--- a/public/main.css
+++ b/public/main.css
@@ -6,8 +6,9 @@ body {
     margin: 10px;
     padding: 10px;
     height: 100%;
-    background-color: rgb(146, 206, 249);
     color: gold;
+    background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/pf-s107-td-17045_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=1e434b6e02b8dc3b0bbff0799db7f7a7");
+  
       
 }
 
