--- a/public/main.css
+++ b/public/main.css
@@ -1,173 +1,183 @@
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-  background-image: url("https://cdn.diys.com/wp-content/uploads/2019/09/Oil-Painting-of-Daisy-Flower-Field.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed; 
-  background-size: cover;
-    
+background-image: url("https://cdn.diys.com/wp-content/uploads/2019/09/Oil-Painting-of-Daisy-Flower-Field.jpg");
+background-repeat: no-repeat;
+background-attachment: fixed; 
+background-size: cover;
   
-      
+
+    
 }
 
 h1 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 36pt;
-    font-weight: bolder;
-    color: #fff;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 36pt;
+  font-weight: bolder;
+  color: #fff;
 }
 
 h2 {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 18pt;
-    color: #fff;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18pt;
+  color: #fff;
 }
 
 button{
-    font-size: 14pt;
-    
+  font-size: 14pt;
+  
 }
 
 .start_button {
-    top:20%;
-    background-color:#bb54f2;
-    color: #fff;
-    border:none; 
-    border-radius:5px; 
-    padding:10px;
-    min-height:15px; 
-    min-width: 80px;
-  }
+  top:20%;
+  background-color:#bb54f2;
+  color: #fff;
+  border:none; 
+  border-radius:5px; 
+  padding:10px;
+  min-height:15px; 
+  min-width: 80px;
+}
 
 .boxed {
-  border: 1px solid rgb(0, 0, 0) ;
-  background-color: #fff;
-  max-width: 160px;
+border: 1px solid rgb(0, 0, 0) ;
+background-color: #fff;
+max-width: 160px;
 }
 
 .lobbybox {
-  border: 1px solid rgb(0, 0, 0) ;
-  background-color: #fff;
-  width: 300px;
-  height: 150px;
+border: 1px solid rgb(0, 0, 0) ;
+background-color: #fff;
+width: 300px;
+height: 150px;
+margin-left: 54%;
+margin-bottom: 0%;
 }
 
 .new_button {
-  top:20%;
-  background-color:#bb54f2;
-  color: #fff;
-  border:none; 
-  border-radius:5px; 
-  padding:10px;
-  min-height:15px; 
-  min-width: 80px;
+top:20%;
+background-color:#bb54f2;
+color: #fff;
+border:none; 
+border-radius:5px; 
+padding:10px;
+min-height:15px; 
+min-width: 80px;
 }
 
 .join_button {
-  top:20%;
-  background-color:#bb54f2;
-  color: #fff;
-  border:none; 
-  border-radius:5px; 
-  padding:10px;
-  min-height:15px; 
-  min-width: 80px;
+top:20%;
+background-color:#bb54f2;
+color: #fff;
+border:none; 
+border-radius:5px; 
+padding:10px;
+min-height:15px; 
+min-width: 80px;
 }
 
 
 .enter_button{
-  top:20%;
-  background-color:#bb54f2;
-  color: #fff;
-  border:none; 
-  border-radius:5px; 
-  padding:10px;
-  min-height:15px; 
-  min-width: 80px;
-  
+top:20%;
+background-color:#bb54f2;
+color: #fff;
+border:none; 
+border-radius:5px; 
+padding:10px;
+min-height:15px; 
+min-width: 80px;
+
 }
 
 .gamecodetext {
-    margin-left: 20%;
-    margin-top: 5%;
+  margin-left: 20%;
+  margin-top: 5%;
 
 }
 
 .gamedescrip {
 
-  margin-left: 25%;
-  word-wrap: break-word;
-  width: 50%;
-  
+margin-left: 25%;
+word-wrap: break-word;
+width: 50%;
+
 
 }
 
 .description {
 
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 14pt;
-  font-weight: bolder;
-  color: rgb(255, 251, 251);
+font-family: 'Times New Roman', Times, serif;
+font-size: 14pt;
+font-weight: bolder;
+color: rgb(255, 251, 251);
 }
 
 .serverlobby {
 
-  margin-left: 20%;
-  margin-top: 5%;
+margin-left: 20%;
+margin-top: 5%;
 
 }
 
 .serverlobby2 {
 
-  margin-left: 60%;
-  margin-top: -30%;
+margin-left: 60%;
+margin-top: -30%;
 
 }
 
 .gamecodebox {
-  margin-left: 18.5%;
-  
+margin-left: 18.5%;
+
 
 }
 
 .start_button_location{
 
-  margin-left: 20%;
-  margin-top: 5%;
- 
+margin-left: 20%;
+margin-top: 5%;
+
 
 }
 
 .waitingtext{
 
-  margin-left: 60%;
-  margin-top: -18%;
- 
+margin-left: 60%;
+margin-top: -18%;
+
+
+}
+
+.playerWaitingText{
+
+margin-left: 60%;
+margin-top: 0%;
+
 
 }
 
 .waitingbox {
 
-  border: 1px solid rgb(0, 0, 0) ;
-  background-color: #fff;
-  width: 300px;
-  height: 150px;
-  margin-left: 54%;
-  margin-bottom: 0%;
+border: 1px solid rgb(0, 0, 0) ;
+background-color: #fff;
+width: 300px;
+height: 150px;
+margin-left: 54%;
+margin-bottom: 0%;
 
 }
 
 .next_button {
 
-  top:20%;
-  background-color:#bb54f2;
-  color: #fff;
-  border:none; 
-  border-radius:5px; 
-  padding:10px;
-  min-height:15px; 
-  min-width: 80px;
+top:20%;
+background-color:#bb54f2;
+color: #fff;
+border:none; 
+border-radius:5px; 
+padding:10px;
+min-height:15px; 
+min-width: 80px;
 
 }
