--- a/public/main.css
+++ b/public/main.css
@@ -181,3 +181,34 @@ min-height:15px;
 min-width: 80px;
 
 }
+
+/* Sets the timer height */
+.promptTimer {
+  position: relative;
+  height: 300px;
+  width: 300px;
+}
+
+/* Don't have timer label */
+.promptTimerCircle {
+  fill: none;
+  stroke: none;
+}
+
+/* Displays progress of the timer */
+.promptTimepath {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.timerLabel {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 32px;
+}
