--- a/public/main.css
+++ b/public/main.css
@@ -49,8 +49,9 @@ border: 1px solid rgb(0, 0, 0) ;
 background-color: #fff;
 width: 300px;
 height: 150px;
-margin-left: 54%;
-margin-bottom: 0%;
+position: relative; /* usually the parent, in this case the body element, has position relative so that the absolute positioned child is positioned relative to it */
+height: relative; /* 100% of the viewport height */
+margin: 0; /* recommended */
 }
 
 .new_button {
