--- a/public/main.css
+++ b/public/main.css
@@ -144,7 +144,7 @@ min-width: 80px;
 .gamecodetext {
   margin-left: 20%;
   margin-top: 5%;
-
+  
 }
 
 .gamedescrip {
@@ -232,7 +232,7 @@ min-width: 80px;
 
 }
 
-/* Sets the timer height */
+/* Remove here */
 .promptTimer {
   position: relative;
   height: 300px;
@@ -245,13 +245,25 @@ min-width: 80px;
   stroke: none;
 }
 
-/* Displays progress of the timer */
+/* To here */
 .promptTimepath {
   stroke-width: 7px;
   stroke: grey;
 }
 
-.timerLabel {
+.timerBox {
+  width: 15%;
+  height: 15%;
+  line-height: 200px;
+  border-radius: 50%;
+  
+  font-size: 50px;
+  color: blue;
+  text-align: center;
+  /* background: #000 */
+}
+
+#timerLabel {
   position: absolute;
   width: 300px;
   height: 300px;
@@ -259,6 +271,5 @@ min-width: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
-
   font-size: 32px;
 }
