--- a/public/main.css
+++ b/public/main.css
@@ -266,7 +266,7 @@ min-width: 80px;
 }
 
 
-.timerLabel {
+.timerLabel1, .timerLabel2, .timerLabel3 {
   display: flex;
   /* width: 300px;
   height: 300px; */
