--- a/public/main.css
+++ b/public/main.css
@@ -156,10 +156,11 @@ min-width: 80px;
 }
 
 .gamedescrip {
-
-margin-left: 10%;
+margin-left: 5%;
+margin-right: 5%;
+/* margin-left: 10%; */
 word-wrap: break-word;
-width: 85%;
+/* width: 85%; */
 
 
 }
@@ -240,6 +241,56 @@ padding:10px;
 min-height:15px; 
 min-width: 80px;
 
+}
+
+.enter_button:hover {
+  /* animation: colorTrans 4s infinite alternate; */
+  background-color: rgb(92, 92, 92);
+  cursor: pointer;
+}
+
+.bookButton:hover {
+  /* animation: colorTrans 4s infinite alternate; */
+  background-color: rgb(92, 92, 92);
+  cursor: pointer;
+}
+
+.new_button:hover {
+  animation: colorTrans 1s infinite alternate;
+  /* background-color: rgb(92, 92, 92); */
+  cursor: pointer;
+}
+
+.join_button:hover {
+  animation: colorTrans 1s infinite alternate;
+  /* background-color: rgb(92, 92, 92); */
+  cursor: pointer;
+}
+
+.arrow_button:hover {
+  /* animation: colorTrans 4s infinite alternate; */
+  background-color: rgb(92, 92, 92);
+  cursor: pointer;
+}
+
+.start_button:hover {
+  /* animation: colorTrans 1s infinite alternate; */
+  background-color: rgb(92, 92, 92);
+  cursor: pointer;
+}
+
+@keyframes colorTrans {
+  100% {
+    background-color: rgb(40, 226, 220);
+  }
+  50% {
+    background-color: rgb(72, 0, 93);
+  }
+}
+
+.main_Page{
+  display: flex;
+  flex-direction: column;
 }
 
 /* Remove here */
