--- a/public/main.css
+++ b/public/main.css
@@ -168,15 +168,23 @@ min-width: 80px;
 }
 
 
+#gameProgressStatus, #gameFullStatus {
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 14pt;
+  color: #fff;
+}
+
+
 .enter_button{
-top:20%;
-background-color:#bb54f2;
-color: #fff;
-border:none; 
-border-radius:5px; 
-padding:10px;
-min-height:15px; 
-min-width: 80px;
+  top:20%;
+  background-color:#bb54f2;
+  color: #fff;
+  border:none; 
+  border-radius:5px; 
+  padding:10px;
+  min-height:15px; 
+  min-width: 80px;
 
 }
 
