--- a/public/main.css
+++ b/public/main.css
@@ -48,7 +48,7 @@ max-width: 160px;
 border: 1px solid rgb(0, 0, 0) ;
 background-color: #fff;
 width: 300px;
-height: 250px;
+height: 200px;
 position: relative; /* usually the parent, in this case the body element, has position relative so that the absolute positioned child is positioned relative to it */
 height: relative; /* 100% of the viewport height */
 margin: 0; /* recommended */
@@ -263,9 +263,10 @@ position: relative;
 border: 1px solid rgb(0, 0, 0) ;
 background-color: #fff;
 width: 300px;
-height: 250px;
+height: 200px;
 margin-left: 54%;
 margin-bottom: 0%;
+align-items: center;
 
 }
 
